--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
 deepspeed
 evaluate
-accelerate==0.20.3
+accelerate
 datasets
 frozenlist<1.4
 ordereduuid<1
-pandas<2
 python-dateutil<2.9
 requests<3
-scikit-learn<=1.2
-scipy<1.10
-torch>=2.0.0
-tqdm
-transformers==4.30.2
-typed-argument-parser<1.8
+torch
 wandb
-urllib3<2
-pytest
-peft
+fire
+bitsandbytes
+git+https://github.com/huggingface/transformers.git
+git+https://github.com/huggingface/peft.git
+git+https://github.com/huggingface/accelerate.git
