--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ torch
 wandb
 fire
 bitsandbytes
+huggingface-hub
 git+https://github.com/huggingface/transformers.git
 git+https://github.com/huggingface/peft.git
 git+https://github.com/huggingface/accelerate.git
