--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ fire
 bitsandbytes
 huggingface-hub
 scipy
+accelerate
 git+https://github.com/huggingface/transformers.git
 git+https://github.com/huggingface/peft.git
-git+https://github.com/huggingface/accelerate.git
